--- a/public/style.css
+++ b/public/style.css
@@ -11,4 +11,55 @@
   #map {
     height: 100vh;
     width: 100vw;
+    /*z-index: -1;*/
   }
+  header {
+    display: flex; 
+    padding-left: 20px;
+    background-color: rgba(44, 127, 160, 0.8);
+    width: 50%;
+    position: fixed;
+    z-index: 10; 
+    border-radius: 0 0 30px 0;
+  }
+  .nav-item a {
+    justify-content: flex-end;
+  }
+  /* Header defaults
+header {
+  background-color: rgba(44, 127, 160, 0.8);
+  border-radius: 0 0 10px 10px;
+  height: 50px;
+  width: 95%;
+  position: fixed;
+  left: 2.5%;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+ }
+ 
+ /*
+ * YOUR CSS:
+ */
+ /* ------------------ HEADER */
+ /* header nav {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+ } */
+ 
+ /* .logo {
+  margin: 15px;
+  width: 200px;
+ } */
+ 
+ /* .nav-item {
+  width: 8%;
+  margin: 0 10px;
+  text-align: center;
+ }
+ .nav-item a {
+  text-decoration: none !important;
+  color: white !important;
+  font-size: 30px;
+ } */ 
